<resources>
    <string name="app_name">Machynlleth Weather Station</string>
    <string name="action_settings">Settings</string>
    <string name="title_timestamp">Last updated:</string>
    <string name="title_temperature">Temperature:</string>
    <string name="title_pressure">Pressure:</string>
    <string name="title_humidity">Humidity:</string>
    <string name="title_windspeed">Wind speed &amp; direction:</string>
    <string name="title_mph">mph</string>
    <string name="title_celcius">°C</string>
    <string name="title_hpa">hPa</string>
    <string name="title_percent">%</string>
</resources>
