<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.warmlight.apps.weatherstation.Summary"
    tools:showIn="@layout/activity_summary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_timestamp"
            android:id="@+id/textView2"
            android:layout_gravity="bottom" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timestamp"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_temperature"
            android:id="@+id/title_temperature" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temperature"
            android:layout_alignRight="@+id/timestamp"
            android:layout_marginLeft="10dp"
            android:layout_alignEnd="@+id/timestamp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_celcius"
            android:id="@+id/temperature_units"
            android:layout_alignRight="@+id/timestamp"
            android:layout_alignEnd="@+id/timestamp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_pressure"
            android:id="@+id/title_pressure" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressure"
            android:layout_alignRight="@+id/pressure"
            android:layout_marginLeft="10dp"
            android:layout_alignEnd="@+id/pressure" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hpa"
            android:id="@+id/pressure_units"
            android:layout_marginLeft="2dp"
            android:layout_alignRight="@+id/pressure"
            android:layout_alignEnd="@+id/pressure" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_humidity"
            android:id="@+id/title_humidity" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidity"
            android:layout_alignRight="@+id/humidity"
            android:layout_marginLeft="10dp"
            android:layout_alignEnd="@+id/humidity" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:id="@+id/humdity_units"
            android:layout_alignRight="@+id/humidity"
            android:layout_alignEnd="@+id/humditity" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_windspeed"
            android:id="@+id/title_windspeed" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/windspeed"
            android:layout_alignRight="@+id/windspeed"
            android:layout_marginLeft="10dp"
            android:layout_alignEnd="@+id/windspeed" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:text="@string/title_mph"
            android:layout_height="wrap_content"
            android:id="@+id/windspeed_units"
            android:layout_alignRight="@+id/windspeed"
            android:layout_alignEnd="@+id/windspeed" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_mph"
            android:id="@+id/windDirection"
            android:layout_marginLeft="10dp"
            android:layout_alignRight="@+id/windspeed"
            android:layout_alignEnd="@+id/windspeed" />

    </LinearLayout>

</LinearLayout>
